@startuml

'--------------'
'Hidden members'
'--------------'
hide empty members

'----'
'Move'
'----'
abstract class PieceType {
    - color
    - hasBeenKickedOffTheBoard
    - isBeingPromoted
    + getName()
    + getNextPawnPromotion()
    + getValue()
    + isValidMove()
    + setPieceTypeSpecificAttributes()
}

class Rook {
    - {static} rookIsValidMoveRulesEngine
}

class IsValidMoveParameter {
    - chessboard
    - from
    - to
    - isOpponent
}

interface RulesEngine {
    - rules
    + addRule()
    + process()
}

interface Rule {
    + isApplicable()
    + getResult()
}

'---------'
'Relations'
'---------'
PieceType <|-down- Rook
Rook *-- RookIsValidMoveRulesEngine
RookIsValidMoveRulesEngine -up-|> RulesEngine
RookIsValidMoveRulesEngine .left[#blue].> IsValidMoveParameter

HasEmptyParametersRule -up-* RookIsValidMoveRulesEngine
IsFriendlyFireRule -up-* RookIsValidMoveRulesEngine
IsJumpingRule -up-* RookIsValidMoveRulesEngine
IsMovingIntoCheckRule -up-* RookIsValidMoveRulesEngine
RookIsValidBasicMoveRule -up-* RookIsValidMoveRulesEngine
IsNotAValidMoveRule -up-* RookIsValidMoveRulesEngine

HasEmptyParametersRule -down[#purple]-|> Rule
IsFriendlyFireRule -down[#purple]-|> Rule
IsJumpingRule -down[#purple]-|> Rule
IsMovingIntoCheckRule -down[#purple]-|> Rule
RookIsValidBasicMoveRule -down[#purple]-|> Rule
IsNotAValidMoveRule -down[#purple]-|> Rule

HasEmptyParametersRule -down[#green]-|> PieceTypeSharedRules
IsFriendlyFireRule -down[#green]-|> PieceTypeSharedRules
IsJumpingRule -down[#green]-|> PieceTypeSharedRules
IsMovingIntoCheckRule -down[#green]-|> PieceTypeSharedRules
RookIsValidBasicMoveRule -down[#green]-|> PieceTypeSharedRules
IsNotAValidMoveRule -down[#green]-|> PieceTypeSharedRules

'-----'
'Notes'
'-----'
note right of RookIsValidMoveRulesEngine {
    If a rook does not perform a friendly
    fire on one of its own pieces, if it's
    not jumping, if it doesn't create a check
    on its own king, but it does perform a
    valid basic move it is a valid move. Otherwise
    it's not a valid move.
}

@enduml
